traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:46: error: ';' expected but 'else' found.
    else {posFin = true}
    ^